# ChangeLog for app-arch/dump
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/dump/ChangeLog,v 1.56 2007/07/24 13:49:53 armin76 Exp $

  24 Jul 2007; Raúl Porcel <armin76@gentoo.org> dump-0.4.41.ebuild:
  alpha stable, thanks to Tobias Klausmann for testing

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> dump-0.4.41.ebuild:
  Stable on ppc64

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> dump-0.4.41.ebuild:
  ppc stable

  03 Apr 2007; Raúl Porcel <armin76@gentoo.org> dump-0.4.41.ebuild:
  ia64 stable

  22 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> dump-0.4.41.ebuild:
  Stable on sparc

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> dump-0.4.41.ebuild:
  x86 stable

  17 Mar 2007; Steve Dibb <beandog@gentoo.org> dump-0.4.40.ebuild:
  amd64 stable

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> dump-0.4.40.ebuild:
  x86 stable

  18 Feb 2007; Markus Rothe <corsair@gentoo.org> dump-0.4.40.ebuild:
  Stable on ppc64

  28 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> dump-0.4.40.ebuild:
  Stable on sparc

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> dump-0.4.40.ebuild:
  Stable on ppc.

*dump-0.4.41 (01 Nov 2006)

  01 Nov 2006; Aron Griffis <agriffis@gentoo.org> dump-0.4.40.ebuild,
  +dump-0.4.41.ebuild:
  Mark 0.4.40 stable on alpha/ia64. Bump to 0.4.41 with ermt support #136997

  09 Aug 2006; Brent Baude <ranger@gentoo.org> dump-0.4.40.ebuild:
  Keywording app-arch/dump-0.4.40 ~ppc64 for bug 142830

  16 Jul 2006; Harald van Dĳk <truedfx@gentoo.org> dump-0.4.40.ebuild:
  Don't use --enable-staticz with USE=static. It breaks stuff (bug #99163) and
  libz/libbz2 will be statically linked anyway without it.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-dump-0.4.37,
  files/digest-dump-0.4.39, files/digest-dump-0.4.40, Manifest:
  Fixing duff SHA256 digests: Bug # 131293

  27 May 2005; Joseph Jezak <josejx@gentoo.org> dump-0.4.39.ebuild: