@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST dump-0.4b37.tar.gz 273988 RMD160 ef42bd363bac2ab45be0f67c0945ee9133460584 SHA1 7bf81d8aaf24c212890e9fdb5acb1b37f8772d8a SHA256 2e2dd410115446b21cfefed30e0b17bcd3297164d9b8fde4e08b75a1bb8cc2f8
 DIST dump-0.4b39.tar.gz 277380 RMD160 5fde1cdee7044777ce76190edc20af390b4a2f22 SHA1 14e1c63b1eabbcc6817da06280f171a8111464e4 SHA256 b53d30eeee009a06deaaf7e13e3988e88156cea7364029de0ad8b03f40ca1ade
 DIST dump-0.4b40.tar.gz 281380 RMD160 5801859e2677ad9de89adf35a9ae03b4f581c333 SHA1 7f5695da6406001f3bfb49e0286b24b01efae735 SHA256 393c9a64b5faa09c93e485bd0701388859ec8396b36fd74da084111c1021c463
@@ -18,14 +21,14 @@ EBUILD dump-0.4.41.ebuild 1540 RMD160 ba6d5a46c45509a9fad339a4cf931a71a644bcad S
 MD5 3faff38c1df98a4a9e3af9fc2fae1666 dump-0.4.41.ebuild 1540
 RMD160 ba6d5a46c45509a9fad339a4cf931a71a644bcad dump-0.4.41.ebuild 1540
 SHA256 22bb1485553329ae83521c37a08d78803b8facfccb94babf0d10af03fe9a4961 dump-0.4.41.ebuild 1540
-MISC ChangeLog 7654 RMD160 700f6ff257a26ead8b7f30dc9649ed1d87809c3b SHA1 6ce32c9d11c005cec7aafa398da32e96ce0dd144 SHA256 055f1173957849a743750f1171483024b0322a6759c7b143c17e6b18d277ea9e
-MD5 dd8a088c2529bbec73e0007b0f1672a1 ChangeLog 7654
-RMD160 700f6ff257a26ead8b7f30dc9649ed1d87809c3b ChangeLog 7654
-SHA256 055f1173957849a743750f1171483024b0322a6759c7b143c17e6b18d277ea9e ChangeLog 7654
-MISC metadata.xml 318 RMD160 9e83d78720ba8d403b2617e3239000fd08028f3c SHA1 e2de3d0b86afe41b03ab442b3b21683e893491eb SHA256 fd5b1e906e70a1d7d1b2cdcc39d287ac4336a14ff7363804fbd7c43edeecbb47
-MD5 f3ad54632aa474af98e3215e643558d3 metadata.xml 318
-RMD160 9e83d78720ba8d403b2617e3239000fd08028f3c metadata.xml 318
-SHA256 fd5b1e906e70a1d7d1b2cdcc39d287ac4336a14ff7363804fbd7c43edeecbb47 metadata.xml 318
+MISC ChangeLog 7805 RMD160 7ff71e958eb42e7f2bcae88cfea8ef7497c5b17f SHA1 db870579c80b0b00489a61a01718d9ab8d165651 SHA256 5b56e1b54973dd64c4296a87d7a8d91e843f9e1d645484f856267633021a189f
+MD5 f66270ac5bef8648bfd3760bb3080a53 ChangeLog 7805
+RMD160 7ff71e958eb42e7f2bcae88cfea8ef7497c5b17f ChangeLog 7805
+SHA256 5b56e1b54973dd64c4296a87d7a8d91e843f9e1d645484f856267633021a189f ChangeLog 7805
+MISC metadata.xml 336 RMD160 60bdff11deb00e430bb9bfa9de92c067d107355f SHA1 b21c8db3f5a0256245bf7d4f71b16ddc2be83c24 SHA256 c07212bb60de2af82dded7b892f0b2cef1bd691e01347b2c566f52c2f90a45b2
+MD5 7a4831940a21208b4b07ac26365f7c4e metadata.xml 336
+RMD160 60bdff11deb00e430bb9bfa9de92c067d107355f metadata.xml 336
+SHA256 c07212bb60de2af82dded7b892f0b2cef1bd691e01347b2c566f52c2f90a45b2 metadata.xml 336
 MD5 8bdb3242f50eaa2231c84520117b7883 files/digest-dump-0.4.37 235
 RMD160 f41978d5629d7482bd96ee8c88c2e175e6a66857 files/digest-dump-0.4.37 235
 SHA256 f0c1576f87be1555bcde17d98859b6dabd90634c836406f2e8d5cff111aa7fe4 files/digest-dump-0.4.37 235
@@ -38,3 +41,10 @@ SHA256 d22aa4fb312b20f2450922eff8c71b7acbc89766d34913e41d6779b6ae83437a files/di
 MD5 65c3b1741a48d9e4fdeb823a2d4160a3 files/digest-dump-0.4.41 235
 RMD160 39751a73050e5787db5056f6f7cb21d2a4f21af1 files/digest-dump-0.4.41 235
 SHA256 3cd8552efb129f08b4e2885369230b598e058385b714b7dc43f0c42f5fdc02a9 files/digest-dump-0.4.41 235
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.6 (GNU/Linux)
+
+iD8DBQFG1Z9vyuNVb5qfaOYRAvOaAKCXFtDo6nSg7I/uJAQhA/mjq6rZuQCfRxPY
+VRo+nzfu0/kALA0X0WnQQpI=
+=dy1Q
+-----END PGP SIGNATURE-----
